# mdb-code-insights

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  index.xml  robots.txt  sitemap.xml
.github/workflows/: release.yml  tests.yml
categories/: index.html  index.xml
categories/page/1/: index.html
demo/: index.html  index.xml
demo/file_activity/: index.html
demo/file_coupling/: index.html
demo/file_ownership/: index.html
demo/intro/: index.html
demo/loading_data/: index.html
demo/using_charts/: index.html
docs/: config.toml
docs/content/: _index.md
docs/content/demo/: _index.md  file_activity.md  file_coupling.md  file_ownership.md  intro.md  loading_data.md  using_charts.md
docs/content/getting_started/: configuration.md  installation.md
docs/content/reference/: _index.md  academic_papers.md  books.md  presentations.md
docs/themes/hugo-geekdoc/data/: assets.json
docs/themes/hugo-geekdoc/static/: main-79537cee.min.css
getting_started/: index.html  index.xml
getting_started/configuration/: index.html
getting_started/installation/: index.html
reference/: index.html  index.xml
reference/academic_papers/: index.html
reference/books/: index.html
reference/presentations/: index.html
search/: en.config.min.json  en.data.min.json
src/: config.rs  db.rs  git.rs  main.rs
tags/: index.html  index.xml
tags/page/1/: index.html
