[package]
name = "mdb-code-insights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = '3.1', features = ["derive"]}
cmd_lib = "1.3"
futures = "0.3"
mongodb = "2.1"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
